# libbitcoin-consensus

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  INSTALL  Makefile.am  README.md  appveyor.yml  autogen.sh  bindings-env.sh  bindings-java-build.sh  bindings.bat  bindings.sh  build.cmd  configure.ac  consensus.hpp  consensus.swg  install-cmake.sh  install-cmakepresets.sh  install.sh  libbitcoin-consensus-test_runner.sh  libbitcoin-consensus.pc.in  libbitcoin_consensus_test_runner.sh  version.hpp
.github/workflows/: ci.yml
bindings/: consensus.i
bindings/java/cpp/: consensus_wrap.cpp
bindings/java/lang/org/bitcoin/libconsensus/: SWIGTYPE_p_uint8_t.java  consensusConstants.java  verify_flags.java  verify_result.java
bindings/java/lang/org/libbitcoin/consensus/: SWIGTYPE_p_uint32_t.java  consensus.java  consensusJNI.java
bindings/java/proxy/org/libbitcoin/consensus/: SWIGTYPE_p_unsigned_char.java  consensus.java  consensusConstants.java  consensusJNI.java  verify_flags.java  verify_result.java
bindings/java/wrap/: consensus.cpp
bindings/python/cpp/: consensus_wrap.cpp
bindings/python/lang/: consensus.py
bindings/python/proxy/: consensus.py
bindings/python/wrap/: consensus.cpp
bindings/src/test/java/org/libbitcoin/consensus/: consensusTest.java
builds/cmake/: CMakeLists.txt  CMakePresets.json
builds/msvc/: debug.natvis  resource.rc
builds/msvc/vs2013/: libbitcoin-consensus.import.props  libbitcoin-consensus.import.xml  libbitcoin-consensus.sln
builds/msvc/vs2013/libbitcoin-consensus/: libbitcoin-consensus.props  libbitcoin-consensus.vcxproj  libbitcoin-consensus.vcxproj.filters  libbitcoin-consensus.xml  packages.config
builds/msvc/vs2013/libbitcoin-consensus-test/: libbitcoin-consensus-test.props  libbitcoin-consensus-test.vcxproj  libbitcoin-consensus-test.vcxproj.filters  libbitcoin-consensus-test.xml  packages.config
builds/msvc/vs2015/: libbitcoin-consensus.sln
builds/msvc/vs2015/libbitcoin-consensus/: libbitcoin-consensus.props  libbitcoin-consensus.vcxproj  libbitcoin-consensus.vcxproj.filters  packages.config
builds/msvc/vs2015/libbitcoin-consensus-test/: libbitcoin-consensus-test.props  libbitcoin-consensus-test.vcxproj  libbitcoin-consensus-test.vcxproj.filters  packages.config
builds/msvc/vs2017/libbitcoin-consensus/: libbitcoin-consensus.props  libbitcoin-consensus.vcxproj  libbitcoin-consensus.vcxproj.filters  packages.config
builds/msvc/vs2017/libbitcoin-consensus-test/: libbitcoin-consensus-test.props  libbitcoin-consensus-test.vcxproj  libbitcoin-consensus-test.vcxproj.filters  packages.config
builds/msvc/vs2019/libbitcoin-consensus/: libbitcoin-consensus.props  libbitcoin-consensus.vcxproj  packages.config
builds/msvc/vs2019/libbitcoin-consensus-test/: libbitcoin-consensus-test.vcxproj  packages.config
builds/msvc/vs2022/: libbitcoin-consensus.sln
builds/msvc/vs2022/libbitcoin-consensus/: libbitcoin-consensus.vcxproj  libbitcoin-consensus.vcxproj.filters  packages.config
builds/msvc/vs2022/libbitcoin-consensus-test/: libbitcoin-consensus-test.props  libbitcoin-consensus-test.vcxproj  libbitcoin-consensus-test.vcxproj.filters  packages.config
include/bitcoin/: consensus.hpp
include/bitcoin/consensus/: compat.h  compat.hpp  constants.hpp  define.hpp  export.hpp  primitives.hpp  satoshi_serialize.hpp  script.hpp  transaction.hpp  version.hpp
include/bitcoin/consensus/impl/serialize/: block.ipp  misc.ipp
include/bitcoin/consensus/impl/utility/: array_slice.ipp  data.ipp  endian.ipp  serializer.ipp
include/bitcoin/consensus/math/: checksum.hpp  ec_keys.hpp  hash.hpp  hash_number.hpp  script_number.hpp
include/bitcoin/consensus/utility/: array_slice.hpp  assert.hpp  data.hpp  endian.hpp  serializer.hpp
m4/: ax_java_devel.m4  ax_swig_bindings_java.m4  ax_swig_bindings_python.m4  ax_swig_java.m4
src/: satoshi_serialize.cpp  script.cpp  transaction.cpp
src/clone/: ecwrapper.cpp  pubkey.cpp  pubkey.h  serialize.h  tinyformat.h
src/clone/primitives/: transaction.cpp
src/clone/script/: interpreter.h
src/consensus/: consensus.cpp  consensus.h  consensus.hpp  secp256k1_initializer.cpp  secp256k1_initializer.hpp
src/math/: checksum.cpp  ec_keys.cpp  hash.cpp  hash_number.cpp  script_number.cpp
test/: consensus__script_error_to_verify_result.cpp  consensus__script_verify.cpp  consensus__verify_flags_to_script_flags.cpp  main.cpp  script.cpp  script.hpp  secp256k1_initializer.cpp  test.cpp  test.hpp
